k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-book-frontend-service
  labels:
    app: web-book-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: web-book-frontend
