k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-book-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spanish-story.dixonai.net
      secretName: spanish-story-tls
  rules:
    - host: spanish-story.dixonai.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: web-book-backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-book-frontend-service
                port:
                  number: 3000
